tests/restrict-github-team-management/initprovider-mismatch/resources.yaml
---
# The same detachment expressed through initProvider, which upjet merges into
# forProvider when the field is unset there.
apiVersion: team.github.m.upbound.io/v1beta1
kind: Team
metadata:
  name: admins
  namespace: github-config
spec:
  initProvider:
    name: some-other-team
